<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WSIiZ Schedule</string>
    <string name="menu_settings">Settings</string>
    <string name="location">Location</string>
    <string name="cant_read_folder">folder can\'t be read!</string>
    <string name="nnew">New</string>
    <string name="select">Select</string>
    <string name="file_name">File name:</string>
    <string name="cancel">Cancel</string>
    <string name="create">Save</string>
    <string name="no_data">No Data</string>
    <string name="no_cheese">There is no cheese!</string>
    <string name="img">img</string>
    <string name="help">You can download file from Wirtualna Uczelnia -> Student -> Print schedule -> Click in order to collect distribution of hour in CSV format</string>
    <string name="info">The password is stored in encrypted form</string>

    <string name="main_s_1">Wyższa Szkoła</string>
    <string name="main_s_2">Informatyki i Zarządzania</string>
    <string name="main_s_3">z siedzibą w Rzeszowie</string>
    
    <!-- new -->
    <string name="last_update">Last update time:</string>
    <string name="user_update_screen">Manually update</string>
    <string name="user_update">Select file</string>
    <string name="user_update_save">Save</string>
    <string name="show_less">All lessons</string>
    <string name="grade_averange">Averange</string>
    <string name="settings_warning">Warning</string>
    <string name="settings_warning_message_1">Are you sure?</string>
    <string name="settings_deleted">Deleted!</string>
    <string name="settings_passw_new">Input new password</string>
    <string name="settings_saved">Login successfully saved!</string>
    <string name="settings_wrong">Wrong pare login &amp; password</string>
    <string name="settings_wrong_login">Check your login</string>
    <string name="settings_wrong_passw">Check your password</string>
    <string name="settings_error_internet">Check your Internet connection</string>
    <string name="settings_error">Error! Prease try again</string>
    <string name="async_work">Working</string>
    <string name="async_parse">Parse file</string>
    <string name="parse_error">File syntacsis error!</string>
    <string name="settings_request">request to server</string>
    <string name="menu_login">Please login\nSettings - Change login</string>
    <string name="menu_updated">Successfully updated!</string>
    
    <string name="prew">\u0020\u0020\u003c\u0020\u0020</string>
    <string name="semestr">Semester</string>
    <string name="next">\u0020\u0020\u003e\u0020\u0020</string>
    
    <string name="def_login">w54321</string>
    <string name="def_passw">******</string>
    <string name="login_save_pass">remember password</string>
    <string name="login_go">Log In</string>
    <string name="login_dont_login">without login</string>
    
    <string name="menu_sch">Schedule</string>
    <string name="menu_grades">Grades</string>
    <string name="menu_plan">Academic plan</string>
    <string name="menu_group">Groups</string>
    <string name="menu_bus">WSIZoBus</string> 						<!-- NEW -->
    
    <string name="choice_ch">Choice</string>
    <string name="choice_ok">\u0020\u0020OK\u0020\u0020</string>
    <string name="choice_back">Back</string>
    
    <string name="grade_gr">Grade</string>
    <string name="grade_one">One</string>
    <string name="grade_two">Two</string>
    <string name="grade_war">Conditional</string>
    <string name="grade_aw">Advance</string>
    <string name="grade_kom">Commission Exam</string>
    
    <string name="setting_lang">Language</string>
    <string name="setting_rest">Need restart</string>
    <string name="setting_time">Time</string>
    <string name="setting_show">Show splash screen</string>
    <string name="setting_sec">in seconds</string>
    <string name="setting_usr">User settings</string>
    <string name="setting_delete_usr">Delete login and password</string>
    <string name="setting_delete_db">Droup Data Base</string>
    <string name="setting_ch_ust">Change login</string>
    <string name="setting_login">Login</string>
    <string name="setting_pass">Password</string>
    <string name="setting_save">Check and save</string>
    <string name="setting_updset">Update only&#8230;</string>		<!-- NEW -->
    <string name="setting_updset_summary">Save traffic</string>		<!-- NEW -->
    <string name="setting_updset_sch">Update schedule</string>		<!-- NEW -->
    <string name="setting_updset_gra">Update grades</string>		<!-- NEW -->
    <string name="setting_updset_pln">Update academic plan</string>	<!-- NEW -->
    <string name="setting_updset_grp">Update groups</string>		<!-- NEW -->
    
    <string name="menu_ref">Refresh</string>
    <string name="menu_more">More</string>
    <string name="menu_sett">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_exit">Exit</string>
    
    <string name="app_aut">Author:</string>
    <string name="app_aut_1">0110100101\n0101100101\n0110011000\n0101101110</string>
    
    <color name="gray">#ffff0000</color>

    <string-array name="typ_select">
        <item>Week</item>
        <item>Mounth</item>
        <item>Semestr</item>
    </string-array>
    <string-array name="days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
        <item>Today</item>
        <item>Tomorrow</item>
    </string-array>
    <string-array name="mounth">
        <item>January</item>
        <item>February </item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="entries_lang">
        <item>Українська</item>
        <item>Русский</item>
        <item>English</item>
        <item>Polski</item>
    </string-array>
    <string-array name="entry_lang_values">
        <item>ua</item>
        <item>ru</item>
        <item>en</item>
        <item>pl</item>
    </string-array>
    <string-array name="splash_screen_time">
        <item>1s</item>
        <item>2s</item>
        <item>3s</item>
    </string-array>
    <string-array name="splash_screen_time_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
	</string-array>
</resources>