<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/setting_lang" >
        <ListPreference
            android:entries="@array/entries_lang"
            android:entryValues="@array/entry_lang_values"
            android:key="entry_language"
            android:summary="@string/setting_rest"
            android:title="@string/setting_lang" >
        </ListPreference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/setting_time" >
        <ListPreference
            android:defaultValue="3"
            android:entries="@array/splash_screen_time"
            android:entryValues="@array/splash_screen_time_values"
            android:key="splash_screen_time"
            android:summary="@string/setting_sec"
            android:title="@string/setting_show" >
        </ListPreference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/setting_usr" >
        <Preference
            android:key="button_delete_login_password"
            android:title="@string/setting_delete_usr" />
        <Preference
            android:key="button_delete_db"
            android:title="@string/setting_delete_db" />
        

        <PreferenceScreen android:title="@string/setting_updset" 
            android:summary="@string/setting_updset_summary">
            <PreferenceCategory android:title="@string/setting_updset" >
                <CheckBoxPreference android:key="chb_update_sched"
 					android:title="@string/setting_updset_sch">
				</CheckBoxPreference>
				<CheckBoxPreference android:key="chb_update_grades"
 					android:title="@string/setting_updset_gra">
				</CheckBoxPreference>
				<CheckBoxPreference android:key="chb_update_plan"
 					android:title="@string/setting_updset_pln">
				</CheckBoxPreference>
				<CheckBoxPreference android:key="chb_update_groups"
 					android:title="@string/setting_updset_grp">
				</CheckBoxPreference>
            </PreferenceCategory>
        </PreferenceScreen>
        
        <PreferenceScreen android:title="@string/setting_ch_ust" >
            <PreferenceCategory android:title="@string/setting_ch_ust" >
                <EditTextPreference
                    android:key="edit_login"
                    android:title="@string/setting_login" />
                <EditTextPreference
                    android:key="edit_password"
                    android:summary="Not changed"
                    android:title="@string/setting_pass" />
                <Preference
                    android:key="button_check"
                    android:title="@string/setting_save" />
            </PreferenceCategory>
        </PreferenceScreen>
        <PreferenceScreen android:title="@string/user_update_screen" >
            <PreferenceCategory android:title="@string/user_update_screen" >
                <Preference
                    android:key="user_update"
                    android:title="@string/user_update" />
                <Preference
                    android:enabled="false"
                    android:key="user_update_next"
                    android:title="@string/user_update_save" />
            </PreferenceCategory>
        </PreferenceScreen>
        <Preference
            android:enabled="false"
            android:key="info_update"
            android:selectable="false"
            android:title="@string/last_update" />
    </PreferenceCategory>
</PreferenceScreen>