<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/item_refresh"
        android:icon="@drawable/navigation_refresh"
        android:showAsAction="ifRoom"
        android:title="@string/menu_ref"/>
    <item
        android:id="@+id/item1"
        android:icon="@drawable/abs__ic_menu_moreoverflow_holo_light"
        android:orderInCategory="0"
        android:showAsAction="ifRoom"
        android:title="@string/menu_more">
        <menu>
            <item
                android:id="@+id/item2"
                android:icon="@drawable/action_settings"
                android:title="@string/menu_sett"/>
            <item
                android:id="@+id/item3"
                android:icon="@drawable/action_about"
                android:title="@string/menu_about"/>
            <item
                android:id="@+id/item4"
                android:icon="@drawable/navigation_cancel"
                android:title="@string/menu_exit"/>
        </menu>
    </item>

</menu>