<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#b7061a"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#e55c6b"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/about_title_schedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:text="@string/app_name"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/about_textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_aut"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/about_textView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/app_aut_1"
            android:textColor="#fff" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/about_ll"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_marginTop="5dp"
        android:background="#e55c6b"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingTop="5dp" >

        <TextView
            android:id="@+id/ss_text1_m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/main_s_1"
            android:textColor="#fff"
            android:textSize="16sp"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ss_text2_m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/main_s_2"
            android:textColor="#fff"
            android:textSize="16sp"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ss_text3_m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/main_s_3"
            android:fontFamily="sans-serif-light"
            android:textColor="#fff" />
    </LinearLayout>

    <Button
        android:id="@+id/about_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choice_ok" />

</LinearLayout>