<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cc0000"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/about_canv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="40dp"
        android:layout_weight="7"
        android:contentDescription="@string/img"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_weight="1"
        android:background="#ff4444"
        android:gravity="center"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/edt_login"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/def_login"
            android:inputType="text"
            android:textColorHint="#aaa" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/def_passw"
            android:inputType="textPassword"
            android:textColorHint="#aaa" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="center" >

            <CheckBox
                android:id="@+id/ch_is_remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="40dp"
                android:gravity="center_vertical"
                android:text="@string/login_save_pass"
                android:textColor="#fff" />

            <ImageView
                android:id="@+id/login_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:contentDescription="@string/img"
                android:src="@drawable/info" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            style="@style/btnStyleBeige"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:text="@string/login_go" />

        <Button
            android:id="@+id/btn_dont_login"
            style="@style/btnStyleBeige"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/login_dont_login" />

    </LinearLayout>

</LinearLayout>