<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cc0000"
    android:orientation="vertical"
    tools:context=".SplashScreen" >

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_weight="8"
        android:gravity="center"
        android:src="@drawable/logo_white"
        android:contentDescription="@string/img" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_weight="1"
        android:background="#ff4444"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/ss_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/main_s_1"
            android:textColor="#fff"
            android:textSize="16sp"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ss_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/main_s_2"
            android:textColor="#fff"
            android:textSize="16sp"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ss_text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/main_s_3"
            android:fontFamily="sans-serif-light"
            android:textColor="#fff" />

    </LinearLayout>

</LinearLayout>