<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/LLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/plan_next"
            android:layout_width="68dp"
            android:layout_height="48dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/next"
            android:background="@drawable/b_strip" />

        <Button
            android:id="@+id/plan_prev"
            android:layout_width="68dp"
            android:layout_height="48dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/prew"
            android:background="@drawable/b_strip" />

        <TextView
            android:id="@+id/plan_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/plan_prev"
            android:layout_alignBottom="@+id/plan_prev"
            android:layout_centerHorizontal="true"
            android:text="@string/semestr" />

    </RelativeLayout>

    <ListView
        android:id="@+id/plan_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/LLayout2" >
    </ListView>

</RelativeLayout>