<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/LLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/grades_next"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/next"
            android:layout_width="68dp"
            android:layout_height="48dp"
            android:background="@drawable/b_strip" />

        <Button
            android:id="@+id/grades_prev"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/prew"
            android:layout_width="68dp"
            android:layout_height="48dp"
            android:background="@drawable/b_strip" />

        <TextView
            android:id="@+id/grades_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/semestr"
            android:textSize="20sp" />

    </RelativeLayout>

    <ListView
        android:id="@+id/grades_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/LLayout1" >
    </ListView>

</RelativeLayout>