<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#b7061a"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageLogoPC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="40dp"
        android:layout_weight="7"
        android:contentDescription="@string/img"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_weight="1"
        android:background="#e55c6b"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="3dp" >

            <EditText
                android:id="@+id/edt_choice"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="15"
                android:ems="10"
                android:enabled="false"
                android:inputType="text"
                android:textColorHint="#aaa" />

            <Button
                android:id="@+id/btn_choice"
                style="@style/btnStyleBeige"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:lines="1"
                android:text="@string/choice_ch" />

            <ImageView
                android:id="@+id/choice_help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/help" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="3dp" >

            <Button
                android:id="@+id/btn_choice_accept"
                style="@style/btnStyleBeige"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:text="@string/choice_ok" />

            <Button
                android:id="@+id/btn_choice_back"
                style="@style/btnStyleBeige"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:text="@string/choice_back" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>